--- a/MessengerStorage/MessengerStorage.csproj
+++ b/MessengerStorage/MessengerStorage.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <RepositoryUrl>https://github.com/Andrea-Bruno/MessengerCloud/tree/master/MessengerStorage</RepositoryUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <Description>Trustless cloud that works as a support for Anonymous messenger</Description>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
